lib/tests/fixtures/compiler/parser/non_local_assignment.baseline
Error: non_local_assignment.pp:1:1: cannot assign to $foo::bar: assignment can only be performed on variables local to the current scope.
  $foo::bar = baz
  ^~~~~~~~~
